# thm_cuda

./: .gitignore  CMakeLists.txt  README.md  header.h  main.cpp  problem.cpp  problem.cu
build-shale_1phase-Desktop_Qt_5_12_0_MSVC2017_64bit-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  rules.ninja  shale_1phase.exp  shale_1phase.ilk
build-shale_2phase-Desktop_Qt_5_12_0_MSVC2017_64bit-Default/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  shale_1phase.cbp  shale_1phase.lib
build-shale_2phase-Desktop_Qt_5_12_0_MSVC2017_64bit-Default/res/: Pupstr.txt  Qdnstr.txt  sol0.vtk  sol1.vtk  sol10.vtk  sol100.vtk  sol11.vtk  sol12.vtk  sol13.vtk  sol14.vtk  sol15.vtk  sol16.vtk  sol17.vtk  sol18.vtk  sol19.vtk  sol2.vtk  sol20.vtk  sol21.vtk  sol22.vtk  sol23.vtk  sol24.vtk  sol25.vtk  sol26.vtk  sol27.vtk  sol28.vtk  sol29.vtk  sol3.vtk  sol30.vtk  sol31.vtk  sol32.vtk  sol33.vtk  sol34.vtk  sol35.vtk  sol36.vtk  sol37.vtk  sol38.vtk  sol39.vtk  sol4.vtk  sol40.vtk  sol41.vtk  (+63 more)
shale_1phase/: CMakeLists.txt  header.h  problem.cpp  problem.cu
shale_2phase/: .gitignore  CMakeLists.txt  data_old.txt  header.h  problem - Copy.cu  problem.cpp  problem.cu  results.txt
